app/objects/Personne__c.object
<CustomObject>
    <fields>
        <fullName>Adresse__c</fullName>
        <label>Adresse</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_de_naissance__c</fullName>
        <label>Date de naissance</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lieu_de_naissance__c</fullName>
        <label>Lieu de naissance</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nationalite__c</fullName>
        <label>Nationalite</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prenom__c</fullName>
        <label>Prenom</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telephone__c</fullName>
        <label>telephone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>Personne</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Nom personne</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personnes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>